--- a/templates/server-statefulset.yaml
+++ b/templates/server-statefulset.yaml
@@ -8,7 +8,7 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: {{ template "consul.fullname" . }}-server
+  name: {{ template "consul.name" . }}
   namespace: {{ .Release.Namespace }}
   labels:
     app: {{ template "consul.name" . }}
