--- a/templates/ui-service.yaml
+++ b/templates/ui-service.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "consul.fullname" . }}-ui
+  name: {{ template "consul.name" . }}
   namespace: {{ .Release.Namespace }}
   labels:
     app: {{ template "consul.name" . }}
